<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:rotation="-16"
            android:text="@string/rock_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="#FFA000"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:rotation="-16"
            android:text="@string/paper_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="#388E3C"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:rotation="-16"
            android:text="@string/scissors_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="#7B1FA2"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/player_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="256dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/player1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="#0288D1"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/player_rock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/player_rock"
            android:padding="16dp"
            android:src="@drawable/rock" />

        <ImageView
            android:id="@+id/player_paper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/player_paper"
            android:padding="16dp"
            android:src="@drawable/paper" />

        <ImageView
            android:id="@+id/player_scissors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/player_scissors"
            android:padding="16dp"
            android:src="@drawable/scissors" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/computer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/computer"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="#0288D1"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/com_rock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/computer_rock"
            android:padding="16dp"
            android:src="@drawable/rock" />

        <ImageView
            android:id="@+id/com_paper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/computer_paper"
            android:padding="16dp"
            android:src="@drawable/paper" />

        <ImageView
            android:id="@+id/com_scissors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/computer_scissors"
            android:padding="16dp"
            android:src="@drawable/scissors" />
    </LinearLayout>

    <TextView
        android:id="@+id/versus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:fontFamily="casual"
        android:rotation="-16"
        android:text="@string/versus"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
        android:textColor="#D32F2F"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:rotation="-16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/computer"
        app:layout_constraintStart_toEndOf="@id/player_option"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@drawable/bg_win">

        <TextView
            android:id="@+id/placeholder1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="-16"
            android:textColor="@color/white"
            android:textSize="36sp"
            tools:text="Player" />

        <TextView
            android:id="@+id/placeholder2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="-16"
            android:textColor="@color/white"
            android:textSize="48sp"
            tools:text="Win!" />
    </LinearLayout>

    <ImageView
        android:id="@+id/refresh_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/click_to_refresh"
        android:padding="16dp"
        android:src="@drawable/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>